--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,51 @@
-/* You can add global styles to this file, and also import other style files */
+
+body{
+  background-color: #47685a;
+  display: flex;
+  flex-direction: column;
+
+  color:#fff;
+}/* You can add global styles to this file, and also import other style files */
+
+.ejercicio{
+  padding: 50px;
+}
+
+input{
+  padding: 8px;
+  border-radius: 5px;
+  width: 150px;
+}
+
+button{
+  padding: 5px;
+  width: 100px;
+  margin-left: 20px;
+  background-color: #2c5282;
+  border: none;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-right: 20px;
+
+}
+
+
+
+.item-details{
+
+  padding-top: 20px;
+
+}
+
+
+
+.contenido{
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+  background-color: #dddddd;
+  width: 500px;
+  color: black;
+  padding: 20px;
+  border-radius: 10px;
+}
